--- a/emacs.org
+++ b/emacs.org
@@ -123,7 +123,7 @@
 )
 
 ;; yo, these keys have better alternatives. Use them!
-(bind-key "C-f" 'nope)
+;;(bind-key "C-f" 'nope)
 (bind-key "C-b" 'nope)
 
 (bind-key "M-f" 'nope)
@@ -359,7 +359,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (mapcar (lambda (setting)
           (lexical-let ((key    (car setting))
                         (header (cdr setting)))
-            (global-set-key (concat "\C-c\C-g" key) #'(lambda ()
+            ;;(global-set-key (concat "\C-c\C-g" key) #'(lambda ()
+            (global-set-key (concat "\M-;" key) #'(lambda ()
                                                                     (interactive)
                                                         (gdb-select-window header)))))
         '(("c" . comint)
@@ -620,8 +621,8 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (setq inhibit-splash-screen t)
 
-;;(desktop-save-mode t)
-;;(semantic-mode t)
+(desktop-save-mode t)
+(semantic-mode t)
 (setq indent-tabs-mode nil)
 (setq history-length 25)
 
