--- a/emacs.org
+++ b/emacs.org
@@ -548,6 +548,10 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 (define-key ctl-x-map   "d" 'diredp-dired-files)
 (define-key ctl-x-4-map "d" 'diredp-dired-files-other-window)
 
+(define-key dired-mode-map "x" 'dired-ranger-move)
+(define-key dired-mode-map "c" 'dired-ranger-copy)
+(define-key dired-mode-map "v" 'dired-ranger-paste)
+
 (setq dired-listing-switches "-alk")
 
 
