--- a/emacs.org
+++ b/emacs.org
@@ -638,6 +638,15 @@ Recognized window header names are: 'comint, 'locals, 'registers,
       kept-new-versions 6
       kept-old-versions 2
       version-control t)       ; use versioned backups
+
+(defun my-create-non-existent-directory ()
+      (let ((parent-directory (file-name-directory buffer-file-name)))
+        (when (and (not (file-exists-p parent-directory))
+                   (y-or-n-p (format "Directory `%s' does not exist! Create it?" parent-directory)))
+          (make-directory parent-directory t))))
+
+(add-to-list 'find-file-not-found-functions #'my-create-non-existent-directory)
+
 #+end_src
 
 ** Scrolling behavior
